# bichara

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  bichara  run.sh  syntax.html
Bich/: build.sh  sock.c
Lib/http/: lib.bic
Lib/socket/: lib.bic
Lib/std/: lib.bic
compiler/kagc_ast/: Cargo.toml
compiler/kagc_ast/src/: ast_node.rs  expr.rs  source_file.rs  stmt.rs
compiler/kagc_codegen/: Cargo.toml
compiler/kagc_codegen/src/: errors.rs  lib.rs  typedefs.rs
compiler/kagc_codegen/src/aarch64/: aarch64_gen.rs  mod.rs  stackframe.rs
compiler/kagc_ctx/: Cargo.toml
compiler/kagc_ctx/src/: ctx.rs  lib.rs
compiler/kagc_errors/: Cargo.toml
compiler/kagc_errors/src/: lib.rs
compiler/kagc_ir/: Cargo.toml  README.md
compiler/kagc_ir/src/: ir_instr.rs  ir_types.rs  lib.rs
compiler/kagc_lexer/: Cargo.toml
compiler/kagc_lexer/src/: lib.rs  tokenizer_impl.rs
compiler/kagc_parser/: Cargo.toml
compiler/kagc_parser/src/: errors.rs  lib.rs  parser_impl.rs
compiler/kagc_sema/: Cargo.toml
compiler/kagc_sema/src/: analyzer.rs  errors.rs  lib.rs  typedefs.rs
compiler/kagc_sema/src/type_checker/: checker.rs
compiler/kagc_symbol/: Cargo.toml
compiler/kagc_symbol/src/: function.rs  lib.rs  sym.rs  symbol_table.rs
compiler/kagc_target/: Cargo.toml
compiler/kagc_target/src/: lib.rs  (+1 more)
compiler/kagc_token/: Cargo.toml
compiler/kagc_types/: Cargo.toml
compiler/kagc_utils/: Cargo.toml
examples/: input1.bic  input1.bish  sock.bich  sock.c
kagc/: Cargo.toml
kagc/src/: main.rs
samples/: sample1_input.bic  sample1_output.s  sample2_input.bic  sample2_output.s
src/: ast.rs  codegen.rs  enums.rs  error.rs  function.rs  main.rs  parser.rs  register.rs  symtable.rs  tokenizer.rs  types.rs
src/ast/: ast_kind.rs  ast_node.rs  expr.rs  mod.rs  source_file.rs  stmt.rs
src/ast2/: ast.rs  ast_kind.rs  expr.rs  mod.rs  stmt.rs
src/ast_gen/: mod.rs
src/code_gen/: cg_error.rs  codegen.rs  mod.rs  register.rs
src/context/: compiler_ctx.rs  ctx_error.rs  mod.rs
src/parser/: mod.rs  parse_error.rs  parser_impl.rs
src/semantic/: analyzer.rs  mod.rs  sa_errors.rs  sa_types.rs  type_checker.rs
src/symbol/: function.rs  mod.rs  sym.rs  symbol_table.rs
src/tokenizer/: mod.rs  token_kind.rs  tokenizer_impl.rs
src/utils/: integer.rs  mod.rs  strutils.rs
(+21 files in other folders)
