[workspace]
members = [
    "compiler/kagc_codegen",
    "compiler/kagc_target",
    "compiler/kagc_ast",
    "compiler/kagc_symbol",
    "compiler/kagc_types",
    "compiler/kagc_lexer",
    "compiler/kagc_errors",
    "compiler/kagc_token",
    "compiler/kagc_sema",
    "compiler/kagc_ctx",
    "compiler/kagc_parser",
    "compiler/kagc_utils",
    "kagc"
]
