[package]
name = "kagc_sema"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.4.0"

kagc_ast = { path = "../kagc_ast" }
kagc_types = { path = "../kagc_types" }
kagc_symbol = { path = "../kagc_symbol" }
kagc_token = { path = "../kagc_token" }
kagc_ctx = { path = "../kagc_ctx" }